--- a/MiniPoll/app/src/main/res/drawable/main_btn_shape.xml
+++ b/MiniPoll/app/src/main/res/drawable/main_btn_shape.xml
@@ -4,16 +4,12 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <gradient
-        android:startColor="#87CEEB"
-        android:endColor="#303F9F"
-        android:angle="180"/>
+    <solid
+        android:color="#14a1dd" />
 
     <corners
-        android:radius="100dp"/>
+        android:radius="5dp"/>
 
-    <stroke
-        android:width="2px"
-        android:color="#000000" />
+
 
 </shape>
