--- a/MiniPoll/app/src/main/res/values/styles.xml
+++ b/MiniPoll/app/src/main/res/values/styles.xml
@@ -5,6 +5,7 @@
     <style name="AppTheme" parent="android:Theme.Holo.Light">
         <item name="android:textSize">20sp</item>
         <item name="android:actionBarStyle">@style/AppTheme.actionBar</item>
+
     </style>
 
     <style name="AppTheme.actionBar" parent="@android:style/Widget.Holo.Light.ActionBar.Solid">
@@ -14,16 +15,20 @@
 
     <style name="AppTheme.actionBar.title">
         <item name="android:textSize">25sp</item>
+        <item name = "android:textColor">@color/colorTitle</item>
+
     </style>
 
     <style name="main_btn">
         <item name="android:layout_gravity">center_vertical</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginLeft">40dp</item>
+        <item name="android:layout_marginRight">40dp</item>
         <item name="android:gravity">center_horizontal|center_vertical</item>
         <item name="android:textSize">20sp</item>
         <item name="android:textStyle">bold</item>
-        <item name="android:textColor">@color/colorDark</item>
+        <item name="android:textColor">@color/colorTitle</item>
         <item name="android:padding">@dimen/default_padding</item>
         <item name="android:background">@drawable/main_btn_shape</item>
         <item name="android:drawableRight">@drawable/ic_go</item>
