--- a/MiniPoll/app/src/main/res/layout/collect_item_row.xml
+++ b/MiniPoll/app/src/main/res/layout/collect_item_row.xml
@@ -7,7 +7,7 @@
     android:padding="5dp">
 
     <TextView
-        android:id="@+id/show_row_name"
+        android:id="@+id/user_id_row"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="start"
