--- a/MiniPoll/app/src/main/res/layout/collected_sondage_row.xml
+++ b/MiniPoll/app/src/main/res/layout/collected_sondage_row.xml
@@ -9,7 +9,7 @@
     android:padding="@dimen/default_padding">
 
     <TextView
-        android:id="@+id/show_row_name"
+        android:id="@+id/user_id_row"
         android:layout_width="332dp"
         android:layout_height="66dp"
         android:layout_gravity="start"
@@ -39,5 +39,5 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/show_row_name" />
+        app:layout_constraintTop_toBottomOf="@+id/user_id_row" />
 </android.support.constraint.ConstraintLayout>
