--- a/MiniPoll/app/src/main/res/layout/collected_sondage_row.xml
+++ b/MiniPoll/app/src/main/res/layout/collected_sondage_row.xml
@@ -20,6 +20,10 @@
         android:layout_marginTop="16dp"
         android:singleLine="false"
         android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
+        android:autoSizeTextType="uniform"
+        android:autoSizeMinTextSize="10sp"
+        android:autoSizeMaxTextSize="18sp"
+        android:autoSizeStepGranularity="2sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
