--- a/MiniPoll/app/src/main/res/layout/activity_creation_sondage.xml
+++ b/MiniPoll/app/src/main/res/layout/activity_creation_sondage.xml
@@ -16,9 +16,9 @@
             android:id="@+id/label_question"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="4dp"
             android:text="@string/poll_manage_question_title"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -31,17 +31,17 @@
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="12dp"
             android:text="@string/create_survey_number_choice"
             app:layout_constraintEnd_toStartOf="@+id/nbre_choix"
-            app:layout_constraintHorizontal_bias="0.16"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/text_description" />
 
         <EditText
             android:id="@+id/text_description"
             android:layout_width="354dp"
-            android:layout_height="54dp"
+            android:layout_height="79dp"
             android:layout_marginEnd="8dp"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
@@ -69,8 +69,8 @@
             android:id="@+id/label_options"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
-            android:layout_marginStart="16dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:text="@string/create_survey_choice_title"
             app:layout_constraintStart_toStartOf="parent"
@@ -165,8 +165,8 @@
             android:id="@+id/button2"
             android:layout_width="35dp"
             android:layout_height="36dp"
-            android:layout_marginEnd="52dp"
-            android:layout_marginRight="52dp"
+            android:layout_marginEnd="68dp"
+            android:layout_marginRight="68dp"
             android:layout_marginTop="80dp"
             android:background="@color/helpBlue"
             android:onClick="next2"
@@ -179,18 +179,82 @@
             tools:text="+" />
 
         <Button
+            android:id="@+id/buttonRemove1"
+            android:layout_width="35dp"
+            android:layout_height="36dp"
+            android:layout_marginEnd="24dp"
+            android:layout_marginRight="24dp"
+            android:layout_marginTop="8dp"
+            android:background="@color/helpBlue"
+            android:onClick="previous2"
+            android:text="@string/remove_previous_element"
+            android:textColor="@android:color/white"
+            android:textSize="18sp"
+            android:visibility="invisible"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/buttonRemove" />
+
+        <Button
+            android:id="@+id/buttonRemove2"
+            android:layout_width="35dp"
+            android:layout_height="36dp"
+            android:layout_marginEnd="24dp"
+            android:layout_marginRight="24dp"
+            android:layout_marginTop="8dp"
+            android:background="@color/helpBlue"
+            android:onClick="previous3"
+            android:text="@string/remove_previous_element"
+            android:textColor="@android:color/white"
+            android:textSize="18sp"
+            android:visibility="invisible"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/buttonRemove1" />
+
+        <Button
+            android:id="@+id/buttonRemove3"
+            android:layout_width="35dp"
+            android:layout_height="36dp"
+            android:layout_marginEnd="24dp"
+            android:layout_marginRight="24dp"
+            android:layout_marginTop="4dp"
+            android:background="@color/helpBlue"
+            android:onClick="previous4"
+            android:text="@string/remove_previous_element"
+            android:textColor="@android:color/white"
+            android:textSize="18sp"
+            android:visibility="invisible"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/buttonRemove2" />
+
+        <Button
+            android:id="@+id/buttonRemove"
+            android:layout_width="35dp"
+            android:layout_height="36dp"
+            android:layout_marginEnd="24dp"
+            android:layout_marginRight="24dp"
+            android:layout_marginTop="124dp"
+            android:background="@color/helpBlue"
+            android:onClick="previous1"
+            android:text="@string/remove_previous_element"
+            android:textColor="@android:color/white"
+            android:textSize="18sp"
+            android:visibility="invisible"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/nbre_choix" />
+
+        <Button
             android:id="@+id/button3"
             android:layout_width="35dp"
             android:layout_height="36dp"
-            android:layout_marginEnd="52dp"
-            android:layout_marginRight="52dp"
+            android:layout_marginEnd="68dp"
+            android:layout_marginRight="68dp"
             android:layout_marginTop="8dp"
-            android:background="@color/colorPrimary"
+            android:background="@color/helpBlue"
+            android:onClick="next3"
             android:text="@string/create_next_element"
             android:textColor="@android:color/white"
             android:textSize="18sp"
             android:visibility="invisible"
-            android:onClick="next3"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/button2"
             tools:text="+" />
@@ -199,15 +263,15 @@
             android:id="@+id/button4"
             android:layout_width="35dp"
             android:layout_height="36dp"
-            android:layout_marginEnd="52dp"
-            android:layout_marginRight="52dp"
+            android:layout_marginEnd="68dp"
+            android:layout_marginRight="68dp"
             android:layout_marginTop="8dp"
-            android:background="@color/colorPrimary"
+            android:background="@color/helpBlue"
+            android:onClick="next4"
             android:text="@string/create_next_element"
             android:textColor="@android:color/white"
             android:textSize="18sp"
             android:visibility="invisible"
-            android:onClick="next4"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/button3"
             tools:text="+" />
@@ -217,15 +281,15 @@
             android:layout_width="35dp"
             android:layout_height="36dp"
             android:layout_marginBottom="8dp"
-            android:layout_marginEnd="52dp"
-            android:layout_marginRight="52dp"
+            android:layout_marginEnd="68dp"
+            android:layout_marginRight="68dp"
             android:layout_marginTop="8dp"
-            android:background="@color/colorPrimary"
+            android:background="@color/helpBlue"
+            android:onClick="next5"
             android:text="@string/create_next_element"
             android:textColor="@android:color/white"
             android:textSize="18sp"
             android:visibility="invisible"
-            android:onClick="next5"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/button4"
