--- a/MiniPoll/app/src/main/res/layout/activity_creation_sondage_summary.xml
+++ b/MiniPoll/app/src/main/res/layout/activity_creation_sondage_summary.xml
@@ -7,42 +7,50 @@
 
     <TextView
         android:id="@+id/description_summary"
-        android:layout_width="257dp"
-        android:layout_height="48dp"
+        android:layout_width="320dp"
+        android:layout_height="72dp"
         android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="16dp"
         android:text="TextView"
-        app:layout_constraintEnd_toStartOf="@+id/choix_summary"
-        app:layout_constraintHorizontal_bias="0.38"
+        android:autoSizeTextType="uniform"
+        android:autoSizeMinTextSize="12sp"
+        android:autoSizeMaxTextSize="18sp"
+        android:autoSizeStepGranularity="2sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ListView
         android:id="@+id/options_summary"
         android:layout_width="321dp"
-        android:layout_height="388dp"
+        android:layout_height="283dp"
         android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="20dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.51"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/description_summary" />
+        app:layout_constraintTop_toBottomOf="@+id/choix_summary" />
 
     <TextView
         android:id="@+id/choix_summary"
-        android:layout_width="wrap_content"
+        android:layout_width="321dp"
         android:layout_height="45dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginEnd="28dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="28dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
         android:text="TextView"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintHorizontal_bias="0.888"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/description_summary" />
 
     <Button
         android:id="@+id/createSond"
