--- a/MiniPoll/app/src/main/res/values/colors.xml
+++ b/MiniPoll/app/src/main/res/values/colors.xml
@@ -10,7 +10,7 @@
         <color name="colorFlash">#FF4081</color>
 
         <!-- Utilisées -->
-        <color name="helpBlue">#4db1d8</color>
+        <color name="helpBlue">#4169E1</color>
         <color name="colorPrimaryDark">#4cb0d8</color>
         <color name="colorDark">#000000</color>
         <color name="colorError">#FF0000</color>
