--- a/MiniPoll/app/src/main/res/layout/activity_creation_sondage.xml
+++ b/MiniPoll/app/src/main/res/layout/activity_creation_sondage.xml
@@ -168,7 +168,7 @@
             android:layout_marginEnd="68dp"
             android:layout_marginRight="68dp"
             android:layout_marginTop="80dp"
-            android:background="@color/helpBlue"
+            android:background="@color/colorFont"
             android:onClick="next2"
             android:text="@string/create_next_element"
             android:textColor="@android:color/white"
@@ -185,7 +185,7 @@
             android:layout_marginEnd="24dp"
             android:layout_marginRight="24dp"
             android:layout_marginTop="8dp"
-            android:background="@color/helpBlue"
+            android:background="@color/colorFont"
             android:onClick="previous2"
             android:text="@string/remove_previous_element"
             android:textColor="@android:color/white"
@@ -201,7 +201,7 @@
             android:layout_marginEnd="24dp"
             android:layout_marginRight="24dp"
             android:layout_marginTop="8dp"
-            android:background="@color/helpBlue"
+            android:background="@color/colorFont"
             android:onClick="previous3"
             android:text="@string/remove_previous_element"
             android:textColor="@android:color/white"
@@ -217,7 +217,7 @@
             android:layout_marginEnd="24dp"
             android:layout_marginRight="24dp"
             android:layout_marginTop="4dp"
-            android:background="@color/helpBlue"
+            android:background="@color/colorFont"
             android:onClick="previous4"
             android:text="@string/remove_previous_element"
             android:textColor="@android:color/white"
@@ -233,7 +233,7 @@
             android:layout_marginEnd="24dp"
             android:layout_marginRight="24dp"
             android:layout_marginTop="124dp"
-            android:background="@color/helpBlue"
+            android:background="@color/colorFont"
             android:onClick="previous1"
             android:text="@string/remove_previous_element"
             android:textColor="@android:color/white"
@@ -249,7 +249,7 @@
             android:layout_marginEnd="68dp"
             android:layout_marginRight="68dp"
             android:layout_marginTop="8dp"
-            android:background="@color/helpBlue"
+            android:background="@color/colorFont"
             android:onClick="next3"
             android:text="@string/create_next_element"
             android:textColor="@android:color/white"
@@ -266,7 +266,7 @@
             android:layout_marginEnd="68dp"
             android:layout_marginRight="68dp"
             android:layout_marginTop="8dp"
-            android:background="@color/helpBlue"
+            android:background="@color/colorFont"
             android:onClick="next4"
             android:text="@string/create_next_element"
             android:textColor="@android:color/white"
@@ -284,7 +284,7 @@
             android:layout_marginEnd="68dp"
             android:layout_marginRight="68dp"
             android:layout_marginTop="8dp"
-            android:background="@color/helpBlue"
+            android:background="@color/colorFont"
             android:onClick="next5"
             android:text="@string/create_next_element"
             android:textColor="@android:color/white"
